--- a/css/style.css
+++ b/css/style.css
@@ -1,313 +1,940 @@
-@font-face {
-  font-family: "PT Sans Narrow";
-  src: local("PT Sans Narrow"),
-  url(../fonts/ptsansnarrow.woff) format("woff"),
-  url(../fonts/ptsansnarrow.woff2) format("woff2");
-  font-weight: normal;
+body {
+  min-width: 960px;
+  margin: 0;
+  padding: 0;
+
+  font-family: "PT Sans Narrow", Arial, sans-serif;
+  font-size: 14px;
+  line-height: 24px;
+  font-weight: 700;
+  color: #ffffff;
+  text-transform: uppercase;
+
+  background-color: #000000;
+  background-position: top center;
+  background-repeat: no-repeat;
 }
 
-@font-face {
-  font-family: "PT Sans Narrow";
-  src: local("PT Sans Narrow Bold"),
-  url(../fonts/ptsansnarrowbold.woff) format("woff"),
-  url(../fonts/ptsansnarrowbold.woff2) format("woff2");
-  font-weight: bold;
+a {
+  text-decoration: none;
 }
 
-*,
-*::after,
-*::before {
-  box-sizing: border-box;
+img {
+  max-width: 100%;
+  height: auto;
 }
 
-.visually-hidden {
+.visually-hidden:not(:focus):not(:active),
+input[type="checkbox"].visually-hidden,
+input[type="radio"].visually-hidden {
   position: absolute;
-  clip: rect(0 0 0 0);
+
   width: 1px;
   height: 1px;
   margin: -1px;
+  border: 0;
+  padding: 0;
+
+  white-space: nowrap;
+
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
 
-
-.container {
-  width: 941px;
-
-  margin: 0 auto;
-}
-
-.header {
-  background-color: #000000;
-}
-
-.header ul,
-.footer ul {
-  list-style: none;
-}
-
-.main-nav {
-  height: 72px;
-  display: flex;
-  justify-content: space-between;
-}
-
-.nav-list {
-  display: flex;
-}
-
-.nav-link {
-  font-size: 16px;
-  font-family: "PT Sans Narrow", Arial, sans-serif;
-  font-weight: bold;
-  line-height: 20px;
-  text-transform: uppercase;
-  color: #ffffff;
-  text-decoration: none;
-
-  border: none;
-  background-color: transparent;
-}
-
-.nav-link:hover,
-.nav-link:active {
-  background-color: #242424;
-}
-
-.main {
-  padding-top: 50px;
-
-  font-family: "PT Sans Narrow", Arial, sans-serif;
-  font-weight: bold;
-  text-transform: uppercase;
+.inner-page {
   color: #000000;
 
-  background: #F8F5F2 url("../img/main-bg.png") repeat 0 0;
+  background-color: #f9f6f3;
+  background-image: url("../img/main-bg.png");
+  background-position: 0 0;
+  background-repeat: repeat;
 }
 
-.main-body {
-  display: flex;
-  justify-content: space-between;
+.main-header {
+  margin-bottom: 75px;
 }
 
-.main-head {
-  width: 100%;
+.inner-page .main-header {
   margin-bottom: 50px;
-}
 
-.title{
-  font-size: 30px;
-  line-height: 39px;
-}
-
-.paragraph {
-  font-size: 14px;
-  line-height: 24px;
-}
-
-.breadcrumbs {
-  list-style: none;
-}
-
-.breadcrumbs a {
-  color: inherit;
-  text-decoration: none;
-}
-
-.breadcrumbs a:not([href]) {
-  color: #ABA9A7;
-}
-
-.filter {
-  width: 167px;
-}
-
-.filter-field {
-  border: none;
-}
-
-.filter-field legend {
-  font-size: 24px;
-  line-height: 31px;
-}
-
-.filter-field ul {
-  list-style: none;
+  background-color: #000000;
 }
 
 .button {
-  border: none;
+  display: inline-block;
+  margin-right: 16px;
+  padding: 10px 30px;
 
-  font-weight: inherit;
-  font-size: 13px;
-  line-height: 17px;
-  text-decoration: none;
+  font: inherit;
+  text-align: center;
   color: #ffffff;
+  vertical-align: middle;
+  text-transform: uppercase;
 
   background-color: #000000;
+  border: none;
 }
 
 .button:hover,
+.button:focus,
 .button:active {
-  background-color: #663D15;
+  background-color: #663d15;
 }
 
-.social .button {
-  font-size: 1px;
-  color: transparent;
+.button.disabled,
+.button:disabled {
+  cursor: default;
+  opacity: 0.5;
+  background-color: #000000;
 }
 
-.button-vk {
-  background: #000000 url("../img/vk.svg") no-repeat 50%;
-}
-
-.button-fb {
-  background: #000000 url("../img/facebook.svg") no-repeat 50%;
-}
-
-.button-instagram {
-  background: #000000 url("../img/instagram.svg") no-repeat 50%;
-}
-
-.checkbox:hover,
-.radio:hover {
-  color: #663D15;
-}
-
-.goods {
-  width: 700px;
-}
-
-.goods-cards {
+.main-navigation {
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
+  align-items: center;
+
+  font-size: 16px;
+  line-height: 20px;
+  color: #ffffff;
+
+  background-color: transparent;
+}
+
+.inner-page .main-navigation {
+  display: flex;
+  align-items: flex-start;
+  flex-direction: row;
+}
+
+.main-header-logo {
+  order: 2;
+  width: 368px;
+  height: 153px;
+}
+
+.inner-page .main-header-logo {
+  order: 0;
+
+  width: 111px;
+  height: 24px;
+  padding: 23px 20px;
+}
+
+.main-navigation-wrapper {
+  width: 100%;
+  margin-bottom: 60px;
+
+  background-color: #000000;
+}
+
+.main-navigation-wrapper .container {
+  display: flex;
   justify-content: space-between;
+}
+
+
+.site-navigation,
+.user-navigation {
   list-style: none;
+  margin: 0;
   padding: 0;
 }
 
-.goods-card {
-  width: 220px;
-
-  background-color: #ffffff;
+.site-navigation {
+  display: flex;
+  flex-wrap: wrap;
+  width: 620px;
 }
 
-.card-title {
-  font-size: 14px;
-  line-height: 18px;
+.user-navigation {
+  display: flex;
+  max-width: 140px;
 }
 
-.good-type {
-  text-transform: none;
+.inner-page .user-navigation {
+  margin-left: auto;
 }
 
-.price p {
-  font-size: 14px;
-  line-height: 18px;
+.site-navigation a,
+.user-navigation a {
+  display: block;
+  padding: 25px 20px;
 
-  background-color: #E5E5E5;
+  vertical-align: middle;
+  color: #ffffff;
 }
 
-.pagination {
+.site-navigation a:hover,
+.site-navigation a:focus,
+.user-navigation a:hover,
+.user-navigation a:focus {
+  background-color: #242424;
+}
+
+.user-navigation .login-link {
+  position: relative;
+  padding-left: 50px;
+}
+
+.login-link::before {
+  content: "";
+
+  position: absolute;
+  top: 27px;
+  left: 24px;
+
+  width: 16px;
+  height: 18px;
+
+  background-image: url("../img/login.svg");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+
+  opacity: 0.3;
+}
+
+.login-link:hover::before,
+.login-link:focus::before,
+.login-link:active::before {
+  opacity: 1;
+}
+
+.container {
+  width: 940px;
+  margin: 0 auto;
+  padding: 0 10px;
+}
+
+.features {
+  margin-bottom: 80px;
+}
+
+.features-list {
+  display: flex;
+  justify-content: space-between;
+  margin: 0;
+  padding: 0;
+
   list-style: none;
 }
 
-.pagination a {
-  text-decoration: none;
+.feature-item {
+  width: 300px;
+
+  text-align: center;
+}
+
+.feature-item h3 {
+  position: relative;
+
+  margin: 0;
+  margin-bottom: 60px;
+
+  font-size: 30px;
+  line-height: 42px;
+}
+
+.feature-item h3::after {
+  content: "";
+
+  position: absolute;
+  bottom: -30px;
+  left: 50%;
+
+  width: 20px;
+  height: 20px;
+  margin-left: -10px;
+
+  background-color: #ffffff;
+
+  transform: rotate(45deg);
+}
+
+.feature-item p {
+  margin: 0 10px;
+}
+
+.index-columns {
+  display: flex;
+  justify-content: space-between;
+  padding: 50px 80px;
+  margin-bottom: 35px;
+
+  color: #000000;
+
+  background-color: #f8f5f2;
+  background-image: url("../img/main-bg.png");
+  background-position: center, 0 0;
+  background-repeat: no-repeat, repeat;
+}
+
+.index-columns h2 {
+  margin: 0;
+  margin-bottom: 25px;
+
+  font-size: 30px;
+  line-height: 42px;
+}
+
+.news {
+  width: 380px;
+}
+
+.news-list {
+  margin: 0;
+  margin-bottom: 25px;
+  padding: 0;
+
+  list-style: none;
+}
+
+.news-item {
+  margin-bottom: 25px;
+}
+
+.news-item p {
+  margin: 0;
+}
+
+.news-item time {
+  text-transform: none;
+}
+
+.gallery {
+  width: 300px;
+}
+
+.gallery-container {
+  position: relative;
+
+  height: 260px;
+}
+
+.gallery-content {
+  height: 164px;
+  margin: 0;
+
+  background-color: #cccccc;
+  border: 7px solid #ffffff;
+}
+
+.gallery-content img {
+  width: 286px;
+  height: 164px;
+}
+
+.gallery-button {
+  box-sizing: border-box;
+  position: absolute;
+  bottom: 0;
+
+  width: 140px;
+  margin: 0;
+}
+
+.gallery-button-back {
+  left: 0;
+}
+
+.gallery-button-next {
+  right: 0;
+}
+
+.contacts {
+  width: 380px;
+}
+
+.contacts p {
+  margin: 0;
+  margin-bottom: 25px;
+}
+
+.appointment {
+  width: 300px;
+}
+
+.appointment-info {
+  margin: 0;
+  margin-bottom: 15px;
+}
+
+.appointment-form {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.appointment-item {
+  width: 140px;
+  margin: 0;
+  margin-bottom: 10px;
+}
+
+.appointment-item label {
+  display: block;
+  margin-bottom: 9px;
+  margin-left: 15px;
+}
+
+.appointment-item input {
+  box-sizing: border-box;
+  width: 140px;
+  padding-top: 8px;
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-bottom: 7px;
+
+  font: inherit;
+
+  background-color: transparent;
+  border: 2px solid #000000;
+}
+
+.appointment-item input:focus {
+  border-color: #663d15;
+}
+
+.appointment .button {
+  display: block;
+  width: 100%;
+  margin-top: 10px;
+  margin-right: 0;
+}
+
+.page-title {
+  margin: 0;
+  margin-bottom: 15px;
+  padding: 0;
+
+  font-size: 30px;
+  line-height: 42px;
+}
+
+.breadcrumbs {
+  display: flex;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  padding: 0;
+  margin: 0;
+  margin-bottom: 50px;
+
+  list-style: none;
+}
+
+.breadcrumbs li {
+  position: relative;
+
+  margin-right: 42px;
+}
+
+.breadcrumbs li:last-child {
+  margin-right: 0;
+}
+
+.breadcrumbs li::after {
+  content: "";
+
+  position: absolute;
+  top: 7px;
+  right: -25px;
+
+  width: 8px;
+  height: 8px;
+
+  background-color: #000000;
+
+  transform: rotate(45deg);
+}
+
+.breadcrumbs a {
+  color: #000000;
+}
+
+.breadcrumbs a:hover,
+.breadcrumbs a:focus {
+  text-decoration: underline;
+}
+
+.breadcrumbs-current {
+  color: #aba9a7;
+}
+
+.breadcrumbs-current::after {
+  display: none;
+}
+
+.catalog-columns {
+  display: flex;
+  justify-content: space-between;
+}
+
+.filters {
+  width: 180px;
+}
+
+.filter fieldset {
+  padding: 0;
+  margin: 0;
+  margin-bottom: 30px;
+
+  border: none;
+}
+
+.filter fieldset:first-child {
+  margin-bottom: 35px;
+}
+
+.filter legend {
+  margin-bottom: 26px;
+
+  font-size: 24px;
+  line-height: 30px;
+}
+
+.filter ul {
+  padding: 0;
+  margin: 0;
+
+  list-style: none;
+  line-height: 18px;
+}
+
+.filter-option {
+  margin-bottom: 19px;
+  padding-left: 45px;
+}
+
+.filter-option label {
+  position: relative;
+
+  display: block;
+
+  cursor: pointer;
+  user-select: none;
+}
+
+.filter-input:hover + label,
+.filter-input:focus + label {
+  color: #663d15;
+}
+
+.filter-input-checkbox + label::before {
+  content: "";
+  position: absolute;
+  left: -42px;
+  top: 0;
+
+  width: 16px;
+  height: 16px;
+
+  border: 2px solid #000000;
+}
+
+.filter-input-checkbox:checked + label::after {
+  content: "";
+
+  position: absolute;
+  top: 4px;
+  left: -38px;
+
+  width: 12px;
+  height: 12px;
+
+  background-image: url("../img/cross.svg");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+}
+
+.filter-input-radio + label::before {
+  content: "";
+
+  position: absolute;
+  left: -42px;
+  top: -1px;
+
+  width: 16px;
+  height: 16px;
+
+  border: 2px solid #000000;
+  border-radius: 50%;
+}
+
+.filter-input:disabled + label {
+  color: #000000;
+
+  opacity: 0.5;
+}
+
+.filter-input-radio:checked + label::after {
+  content: "";
+
+  position: absolute;
+  top: 5px;
+  left: -36px;
+
+  width: 8px;
+  height: 8px;
+
+  background-color: #000000;
+  border-radius: 50%;
+}
+
+.catalog {
+  width: 700px;
+}
+
+.catalog-list {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0;
+  margin: 0;
+  margin-bottom: 25px;
+
+  list-style: none;
+}
+
+.catalog-item {
+  width: 220px;
+  margin-bottom: 20px;
+  margin-right: 20px;
+
+  background-color: #f8f8f8;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.catalog-item:nth-child(3n) {
+  margin-right: 0;
+}
+
+.catalog-item:hover {
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+}
+
+.catalog-item a {
+  display: flex;
+  flex-direction: column;
+
+  color: #000000;
+}
+
+.catalog-item h3 {
+  order: 1;
+  margin-top: 17px;
+  margin-bottom: 12px;
+  margin-left: 16px;
+  margin-right: 15px;
+
+  font-size: 14px;
+  line-height: 18px;
+}
+
+.catalog-category {
+  display: block;
+
+  text-transform: none;
+}
+
+.catalog-item-image {
+  width: 220px;
+  height: 165px;
+  margin: 0;
+}
+
+.catalog-item-price {
+  display: flex;
+  margin: 15px;
+  margin-top: 0;
+}
+
+.catalog-item-price b {
+  width: 112px;
+  padding: 13px 25px 11px;
+
+  font-size: 14px;
+  line-height: 20px;
+  text-align: center;
+
+  background-color: #e5e5e5;
+}
+
+.catalog-item-price .button {
+  width: 50px;
+  padding: 13px 18px 11px;
+  margin-right: 0;
+
+  line-height: 20px;
+  color: #ffffff;
+}
+
+.pagination-list {
+  display: flex;
+  flex-wrap: wrap;
+
+  padding: 0;
+  margin: 0;
+
+  list-style: none;
+}
+
+.pagination-item {
+  margin-right: 5px;
+}
+
+.pagination-item:last-child {
+  margin-right: 0;
+}
+
+.pagination-item a {
+  display: block;
+  padding: 10px 19px;
+
   color: #ffffff;
 
   background-color: #000000;
 }
 
-.pagination a:hover {
-  background-color: #663D15;
+.pagination-item a:hover,
+.pagination-item a:focus,
+.pagination-item a:active {
+  background-color: #663d15;
 }
 
-.pagination a:not([href]) {
+.pagination-item-current a {
   color: #000000;
 
   background-color: #ffffff;
 }
 
-.gallery {
+.pagination-item-current a:hover,
+.pagination-item-current a:focus,
+.pagination-item-current a:active {
+  color: #000000;
+
+  background-color: #ffffff;
+}
+
+.product-photo-preview {
+  display: flex;
+  padding: 0;
+  margin: 0;
+
+  list-style: none;
+}
+
+.product-photos {
   width: 460px;
 }
 
-.small-pictures {
+.product-photo-preview li {
+  width: 140px;
+  height: 149px;
+  margin-right: 20px;
+
+  box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.1);
+}
+
+.product-photo-preview li:nth-child(3n) {
+  margin-right: 0;
+}
+
+.product-photo-full {
+  width: 460px;
+  height: 498px;
+  margin: 0;
+  margin-bottom: 20px;
+
+  box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.1);
+}
+
+.product-description {
   display: flex;
   justify-content: space-between;
+  padding-right: 10px;
+  margin-bottom: 29px;
+}
+
+.product-description p {
+  width: 200px;
+}
+
+.product-article {
+  text-align: right;
+  color: #aeaeae;
+}
+
+.product-price b {
+  width: 112px;
+  padding-top: 13px;
+  padding-left: 36px;
+  padding-right: 36px;
+  padding-bottom: 11px;
+
+  line-height: 20px;
+  text-align: center;
+
+  background-color: #e5e5e5;
+
+  box-sizing: border-box;
+}
+
+.product-price .button {
+  padding-left: 17px;
+  padding-right: 17px;
+}
+
+.product-info {
+  width: 390px;
+  padding-top: 23px;
+}
+
+.product-info p {
+  margin: 0;
+}
+
+.product-info h3 {
+  margin: 0;
+  margin-bottom: 27px;
+
+  font-size: 24px;
+  line-height: 30px;
+}
+
+.product-info .product-text {
+  margin-bottom: 35px;
+}
+
+.product-info .product-price {
+  display: flex;
+  margin-bottom: 63px;
+}
+
+.product-info ul {
+  margin: 0;
   padding: 0;
+
+  list-style: none;
 }
 
-.info-good {
-  width: 380px;
+.product-info li {
+  position: relative;
+
+  padding-left: 23px;
 }
 
-.footer {
-  font-family: "PT Sans Narrow", Arial, sans-serif;
-  font-weight: bold;
-  text-transform: uppercase;
+.product-info li::before {
+  content: "";
+
+  position: absolute;
+  top: 7px;
+  left: 2px;
+
+  width: 8px;
+  height: 8px;
+
+  background-color: #000000;
+
+  transform: rotate(45deg);
+}
+
+.main-footer {
+  margin-top: 65px;
+  padding: 60px 0;
+
   color: #ffffff;
 
-  background: #212121 url("../img/footer-bg.png") repeat 0 0;
+  background-color: #212121;
+  background-image: url("../img/footer-bg.png");
+  background-position: 0 0;
+  background-repeat: repeat;
 }
 
-.footer-inner {
+.inner-page .main-footer {
+  margin-top: 45px;
+}
+
+.main-footer .container {
   display: flex;
 }
 
 .footer-contacts {
-  margin-right: 90px;
+  width: 320px;
+  margin: 0;
+  margin-right: 80px;
 }
 
-.copyright {
-  margin-left: auto;
+.footer-contacts a {
+  color: #ffffff;
+  text-decoration: underline;
 }
 
-.modal {
-  font-family: "PT Sans Narrow", Arial, sans-serif;
-  font-weight: bold;
-  text-transform: uppercase;
-
-  background: #F8F5F2 url("../img/main-bg.png") repeat 0 0;
+.footer-contacts a:hover,
+.footer-contacts a:focus {
+  text-decoration: none;
 }
 
-.custom-input input {
-  border: 2px solid #000000;
+.footer-social {
+  width: 145px;
 
-  font-family: inherit;
-  font-weight: inherit;
+  text-align: center;
+}
 
+.footer-social ul {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  width: 141px;
+  margin: 0 auto;
+  padding: 0;
+
+  list-style: none;
+}
+
+.footer-social b {
+  display: block;
+  margin-bottom: 15px;
+}
+
+.social-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 43px;
+  height: 43px;
+
+  background-color: #000000;
+}
+
+.social-button:hover,
+.social-button:focus {
   background-color: #ffffff;
 }
 
-.custom-input input:focus {
-  outline: none;
-  border-color: #663D15;
+.social-button:hover path,
+.social-button:focus path {
+  fill: #000000;
 }
 
-.form-forgot {
+.footer-copyright {
+  width: 150px;
+  margin: 0;
+  margin-left: auto;
+  text-align: center;
+}
+
+.footer-copyright .button {
+  display: block;
+  margin-right: 0;
+}
+
+.footer-copyright b {
+  display: block;
+  margin-bottom: 15px;
+}
+
+.footer-copyright .button:hover,
+.footer-copyright .button:focus {
   color: #000000;
+
+  background-color: #ffffff;
 }
-
-.close {
-  border: none;
-
-  font-size: 1px;
-  color: transparent;
-
-  background: url("../img/cross.svg") no-repeat 50%;
-}
-
-.vendor-code {
-  color: #aeaeae;
-}
-
-.consist {
-  list-style: none;
-}
-
-.gallery ul {
-  list-style: none;
-}
-
-
-
