--- a/other/style.css
+++ b/other/style.css
@@ -120,13 +120,13 @@ html {
   height: 42px;
   width: 220px;
 
-  display: block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
-  font-size: 1px;
-  color: transparent;
   text-decoration: none;
 
-  background: #EE3643 url("../img/logo-technomart.svg") no-repeat 50%;
+  background-color: #EE3643;
   background-size: 110px;
   box-shadow: 0 5px 0 0 #B52933;
 }
@@ -155,7 +155,7 @@ html {
   background-color: #212A3A;
 }
 
-.nav-search:hover .search-icon path {
+.nav-search:hover path {
   fill: #ffffff;
 }
 
@@ -218,7 +218,7 @@ html {
 
 .bookmarks::before,
 .basket::before {
-  content: '';
+  content: "";
 
   width: 15px;
   height: 15px;
@@ -316,7 +316,7 @@ html {
 }
 
 .head-phone::before {
-  content: '';
+  content: "";
 
   width: 19px;
   height: 19px;
@@ -344,6 +344,7 @@ html {
 .buttons-group {
   display: flex;
   justify-content: flex-end;
+  flex-wrap: wrap;
   width: 300px;
   padding: 0;
   margin: 0;
@@ -354,6 +355,8 @@ html {
 .head-button {
   display: flex;
   padding: 13px 24px 11px;
+  margin-bottom: 11px;
+  margin-left: 11px;
 
   font-size: 21px;
   line-height: 21px;
@@ -372,8 +375,11 @@ html {
 }
 
 .head-button.login {
-  margin-right: 11px;
   padding-left: 27px;
+}
+
+.profile .head-button {
+  margin: 0;
 }
 
 .head-button.user {
@@ -393,11 +399,11 @@ html {
   left: 0;
 }
 
-.head-button:hover .icon path {
+.head-button:hover path {
   fill: #32425C;
 }
 
-.head-button:active .icon path {
+.head-button:active path {
   fill: #c5c5c5;
 }
 
@@ -521,6 +527,7 @@ html {
 
 .breadcrumbs {
   display: flex;
+  flex-wrap: wrap;
   padding: 0;
   margin: 0;
   width: 100%;
@@ -552,8 +559,8 @@ html {
   background: url("../img/icon-home.svg") no-repeat 0 0;
 }
 
-.breadcrumbs li::before {
-  content: '';
+.breadcrumbs li::after {
+  content: "";
 
   width: 8px;
   height: 12px;
@@ -561,12 +568,12 @@ html {
 
   position: absolute;
   top: 50%;
-  left: -25px;
+  right: 18px;
 
   background: url("../img/icon-right-small.svg") no-repeat 0 0;
 }
 
-.breadcrumbs li:first-child::before {
+.breadcrumbs li:last-child::after {
   content: none;
 }
 
@@ -635,11 +642,11 @@ html {
 }
 
 .promo-item a:hover {
-  background-color: rgba(229, 229, 229, 0.2);
+  background-color: rgba(204, 204, 204, 0.2);
 }
 
 .promo-item a:active {
-  background-color: rgba(229, 229, 229, 0.3);
+  background-color: rgba(178, 178, 178, 0.3);
 }
 
 .items-wrapper {
@@ -893,7 +900,7 @@ html {
 }
 
 .button-alternative::before {
-  content: '';
+  content: "";
 
   width: 15px;
   height: 15px;
@@ -1165,7 +1172,7 @@ html {
 }
 
 .checkbox-label::before {
-  content: '';
+  content: "";
 
   height: 23px;
   margin-top: -12px;
@@ -1176,7 +1183,7 @@ html {
 }
 
 .radio-label::before {
-  content: '';
+  content: "";
 
   width: 25px;
   height: 25px;
@@ -1370,7 +1377,7 @@ html {
 
 .card.new::after,
 .promo-item.new::after {
-  content: 'new';
+  content: "new";
 
   height: 28px;
   width: 84px;
@@ -1454,7 +1461,7 @@ html {
 }
 
 .price::after {
-  content: '';
+  content: "";
 
   border-top: 19px solid #ffffff;
   border-bottom: 19px solid #ffffff;
@@ -1489,6 +1496,18 @@ html {
   color: #000000;
 }
 
+.services .simple-text {
+  max-width: 400px;
+}
+
+.about-info .simple-text {
+  max-width: 510px;
+}
+
+.about-contacts .simple-text {
+  max-width: 200px;
+}
+
 .services-list {
   margin-top: 56px;
   margin-right: 80px;
@@ -1499,7 +1518,7 @@ html {
 }
 
 .services-list::after {
-  content: '';
+  content: "";
 
   width: 10px;
   height: 279px;
@@ -1550,7 +1569,7 @@ html {
 
 .service-body {
   display: none;
-  max-width: 380px;
+  max-width: 375px;
   min-height: 260px;
 }
 
@@ -1642,7 +1661,7 @@ html {
 }
 
 .companies li::before {
-  content: '';
+  content: "";
 
   width: 25px;
   height: 2px;
@@ -1736,6 +1755,7 @@ html {
 .menu {
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
   width: 548px;
   padding-left: 0;
   margin-top: 39px;
@@ -1834,6 +1854,10 @@ html {
   background-color: #EE3643;
 }
 
+.copyright {
+  max-width: 240px;
+}
+
 
 /* Modal */
 .modal {
@@ -1900,7 +1924,7 @@ html {
 }
 
 .modal-message::before {
-  content: '';
+  content: "";
 
   width: 66px;
   height: 66px;
